<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name"
            android:textColor="?android:textColorSecondary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/targetCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/personName"
            android:padding="8dp"
            android:text="@string/category" />

        <Button
            android:id="@+id/informations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/targetCategory"
            android:layout_margin="5dp"
            android:text="@string/informations" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
