<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    tools:context=".PersonAddActivity">


    <EditText
        android:id="@+id/PersonFamilyNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="Vezetéknév"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/PersonGivenNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PersonFamilyNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="Keresztnév"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/birthdateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PersonGivenNameEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/birthDate"
        android:textSize="20sp" />


    <DatePicker
        android:id="@+id/BirthDateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdateLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />


    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BirthDateEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/gender"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderLabel"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/activeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerGender"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_marginBottom="5dp"
        android:text="@string/active"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activeLabel"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/targetCategoryLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerActive"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_marginBottom="20dp"
        android:text="@string/category"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerTargetCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/targetCategoryLabel"
        android:ems="10" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerTargetCategory"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addPerson"
            android:text="@string/save" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:onClick="cancel"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>
